# data_engineer_example

./: .env.example  .gitignore  README.md  pyproject.toml
01_kafka_setup/: README.md
02_retrieve_job_urls/: README.md  indeed_job_urls.py
DATA/: README.md
kafka/: README.md  pyproject.toml  setup.py  teardown.py  test.py
kafka_setup/: setup.py
retrieve_job_urls/: indeed.py
src/: .env.example  pyproject.toml
src/01_kafka_setup/: README.md
src/02_retrieve_job_urls/: indeed_job_urls.py
src/03_parse_job_text/: parse_job_html_text.py
src/04_etl_to_postgres/: setup_postgres.py  text_data_to_postgres.py
src/utils/: __init__.py  kafka_utils.py  postgres_utils.py  selenium_utils.py
utils/: __init__.py
